--- a/services_setup/telegraf.conf
+++ b/services_setup/telegraf.conf
@@ -18,8 +18,8 @@
   password = "metricsmetricsmetricsmetrics" # replace with your password
 
 [[inputs.kafka_consumer]]
-  brokers = ["kafka:29092"]
+  brokers = ["kafka:9092"]
   topics = ["gps_data"]
-  consumer_group = "telegraf_metrics_consumers"
+  consumer_group = "gps_data"
   offset = "oldest"
   data_format = "json"
