--- a/services_setup/telegraf_influxdb_grafana.yml
+++ b/services_setup/telegraf_influxdb_grafana.yml
@@ -29,8 +29,28 @@ services:
     networks:
       - mynetwork
 
+  grafana:
+    image: grafana/grafana
+    container_name: grafana-server
+    restart: always
+    depends_on:
+      - influxdb
+    environment:
+      - GF_SECURITY_ADMIN_USER=admin
+      - GF_SECURITY_ADMIN_PASSWORD=admin
+      - GF_INSTALL_PLUGINS=
+    links:
+      - influxdb
+    ports:
+      - "3000:3000"
+    volumes:
+      - grafana_data:/var/lib/grafana
+    networks:
+      - mynetwork
+
 volumes:
   influxdb:
+  grafana_data:
 
 networks:
   mynetwork:
