--- a/web-app/frontend/package.json
+++ b/web-app/frontend/package.json
@@ -7,10 +7,14 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
+    "cross-env": "^7.0.3",
     "d3": "^7.8.5",
+    "leaflet": "^1.9.4",
+    "ol": "^8.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-globe.gl": "^2.27.0",
+    "react-leaflet": "^4.2.1",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
@@ -23,7 +27,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "cross-env PORT=3001 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
