--- a/web-app/frontend/package.json
+++ b/web-app/frontend/package.json
@@ -7,10 +7,15 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
+    "create-react-class": "^15.7.0",
     "cross-env": "^7.0.3",
     "d3": "^7.8.5",
+    "d3-ease": "^3.0.1",
+    "d3-geo": "^3.1.0",
+    "d3-interpolate": "^3.0.1",
     "leaflet": "^1.9.4",
     "ol": "^8.2.0",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-globe.gl": "^2.27.0",
