--- a/web-app/frontend/package.json
+++ b/web-app/frontend/package.json
@@ -14,6 +14,7 @@
     "d3-geo": "^3.1.0",
     "d3-interpolate": "^3.0.1",
     "leaflet": "^1.9.4",
+    "leaflet-defaulticon-compatibility": "^0.1.2",
     "ol": "^8.2.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
@@ -23,6 +24,7 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
+    "react-use-websocket": "^4.5.0",
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.2",
