--- a/.gitignore
+++ b/.gitignore
@@ -686,8 +686,8 @@ thumb
 sketch
 
 # Draw.io files
-*.drawio.bkp
-*.drawio.dtmp
-*.drawio
+**/*.drawio.bkp
+**/*.drawio.dtmp
+**/*.drawio
 
 # End of https://www.toptal.com/developers/gitignore/api/react,django
