prepared the second topic

--- a/services_setup/telegraf.conf
+++ b/services_setup/telegraf.conf
@@ -19,7 +19,7 @@
 
 [[inputs.kafka_consumer]]
   brokers = ["kafka:9092"]
-  topics = ["gps_data"]
-  consumer_group = "gps_data"
+  topics = ["all_data"]
+  consumer_group = "all_data"
   offset = "oldest"
   data_format = "json"
