preparing the webapp for streaming kafka->RTS->ws->FE

--- a/services_setup/telegraf.conf
+++ b/services_setup/telegraf.conf
@@ -13,9 +13,9 @@
 
 [[outputs.influxdb]]
   urls = ["http://influxdb:8086"]
-  database = "main_storage" # replace with your database name
-  username = "telegraf" # replace with your username
-  password = "metricsmetricsmetricsmetrics" # replace with your password
+  database = "main_storage"
+  username = "telegraf"
+  password = "metricsmetricsmetricsmetrics"
 
 [[inputs.kafka_consumer]]
   brokers = ["kafka:9092"]
