--- a/services_setup/postgres.yml
+++ b/services_setup/postgres.yml
@@ -17,6 +17,15 @@ services:
     networks:
       - mynetwork
 
+  redis:
+    image: redis:latest
+    container_name: redis
+    restart: always
+    ports:
+      - "6379:6379"
+    networks:
+      - mynetwork
+
 volumes:
   postgres:
 
