--- a/services_setup/telegraf.conf
+++ b/services_setup/telegraf.conf
@@ -23,3 +23,16 @@
   consumer_group = "all_data"
   offset = "oldest"
   data_format = "json"
+
+[[inputs.docker]]
+  endpoint = "unix:///var/run/docker.sock"
+  gather_services = false
+  container_names = []
+  source_tag = false
+  container_name_include = []
+  container_name_exclude = []
+  timeout = "5s"
+  perdevice = true
+  total = false
+  docker_label_include = []
+  docker_label_exclude = []
