--- a/services_setup/telegraf_influxdb_grafana.yml
+++ b/services_setup/telegraf_influxdb_grafana.yml
@@ -26,6 +26,7 @@ services:
       - influxdb
     volumes:
       - ./telegraf.conf:/etc/telegraf/telegraf.conf:ro
+      - //var/run/docker.sock:/var/run/docker.sock:ro
     networks:
       - mynetwork
 
